# consensus

./: .gitignore  Cargo.toml  cliff.toml  config.example.toml  deny.toml  design.md  execution-flow-design.md  flake.nix  rustfmt.toml
.github/workflows/: ci.yaml  security.yaml
consensus/: Cargo.toml
consensus/benches/: block_validation.rs  mempool_proposal.rs
consensus/src/: consensus.rs  lib.rs  main.rs
consensus/src/consensus_manager/: config.rs  consensus_engine.rs  events.rs  leader_manager.rs  mod.rs  state_machine.rs  traits.rs  utils.rs  view_chain.rs  view_context.rs  view_manager.rs
consensus/src/crypto/: aggregated.rs  conversions.rs  mod.rs  transaction_crypto.rs
consensus/src/mempool/: mod.rs  pool.rs  service.rs  types.rs
consensus/src/state/: account.rs  address.rs  block.rs  leader.rs  mod.rs  notarizations.rs  nullify.rs  peer.rs  transaction.rs  view.rs
consensus/src/storage/: config.rs  conversions.rs  mod.rs  store.rs  tables.rs
consensus/src/tests/: e2e_consensus.rs  mod.rs  network_simulator.rs  test_helpers.rs
consensus/src/validation/: mod.rs  pending_state.rs  service.rs  types.rs  validator.rs
consensus/src/view_manager/: config.rs  events.rs  manager.rs  mod.rs  utils.rs  view_context.rs
crypto/: Cargo.toml
crypto/src/: bls.rs  main.rs  threshold.rs
docs/: p2p-discovery.md  rpc-node.md
grpc-client/: Cargo.toml  build.rs
grpc-client/proto/minimmit/v1/: account.proto  admin.proto  block.proto  common.proto  consensus.proto  node.proto  subscription.proto  transaction.proto
grpc-client/src/: config.rs  error.rs  lib.rs  server.rs
grpc-client/src/services/: account.rs  admin.rs  block.rs  consensus.rs  mod.rs  node.rs  subscription.rs  transaction.rs  utils.rs
grpc-client/tests/: block_e2e.rs  node_e2e.rs  test_helpers.rs  transaction_e2e.rs
node/: Cargo.toml
node/config/: node0.toml  node1.toml  node2.toml  node3.toml  node4.toml  node5.toml
node/src/: main.rs  node.rs
p2p/: Cargo.toml
p2p/src/: config.rs  error.rs  lib.rs  message.rs  network.rs  peer.rs  runtime.rs  service.rs
p2p/tests/: network_integration.rs  service_integration.rs
rpc/: Cargo.toml
rpc/src/: config.rs  grpc.rs  identity.rs  lib.rs  main.rs  node.rs  p2p.rs  sync.rs
rpc/tests/: rpc_integration.rs
sdk/: Cargo.toml
sdk/examples/: transfer.rs
sdk/src/: account.rs  block.rs  client.rs  error.rs  lib.rs  subscription.rs  types.rs  wallet.rs
sdk/src/transaction/: builder.rs  mod.rs  types.rs
storage/: Cargo.toml
tests/: Cargo.toml  integration.nix
tests/src/: lib.rs
tests/src/e2e_consensus/: e2e_consensus.rs  mod.rs  scenarios.rs
tests/src/e2e_rpc/: mod.rs  scenarios.rs
tests/src/gossip/: helpers.rs  scenarios.rs
utils/: Cargo.toml
