[package]
edition = "2024"
name    = "rpc"
version = "0.1.0"

[[bin]]
name = "rpc-node"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow                  = { workspace = true }
arc-swap                = { workspace = true }
ark-serialize           = { workspace = true }
bytes                   = { workspace = true }
clap                    = { workspace = true }
commonware-codec        = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-p2p          = { workspace = true }
commonware-runtime      = { workspace = true }
consensus               = { workspace = true }
figment                 = { workspace = true, features = [ "env", "toml", "yaml" ] }
grpc-client             = { workspace = true }
hex                     = { workspace = true }
p2p                     = { workspace = true }
rand                    = { workspace = true }
rkyv                    = { workspace = true }
rtrb                    = { workspace = true }
serde                   = { workspace = true, features = [ "derive" ] }
slog                    = { workspace = true }
slog-async              = { workspace = true }
slog-term               = { workspace = true }
tempfile                = { workspace = true }
tokio                   = { workspace = true }
tonic                   = { workspace = true }
zeroize                 = { workspace = true }
